logs/stomp_moveit/build.make.003.log.stderr
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_optimization_task.cpp: In constructor ‘stomp_moveit::StompOptimizationTask::StompOptimizationTask(moveit::core::RobotModelConstPtr, std::__cxx11::string, const XmlRpc::XmlRpcValue&)’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_optimization_task.cpp:246:3: error: ‘total_costs_f’ was not declared in this scope
   total_costs_f.open("/home/nsriram/ws_moveit/src/stomp_ros/files/costs.txt", std::ios_base::app);
   ^~~~~~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_optimization_task.cpp:246:3: note: suggested alternative: ‘mat_cost0_f’
   total_costs_f.open("/home/nsriram/ws_moveit/src/stomp_ros/files/costs.txt", std::ios_base::app);
   ^~~~~~~~~~~~~
   mat_cost0_f
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_optimization_task.cpp: In destructor ‘virtual stomp_moveit::StompOptimizationTask::~StompOptimizationTask()’:
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_optimization_task.cpp:256:3: error: ‘total_costs_f’ was not declared in this scope
   total_costs_f.close();
   ^~~~~~~~~~~~~
/home/nsriram/ws_moveit/src/stomp_ros/stomp_moveit/src/stomp_optimization_task.cpp:256:3: note: suggested alternative: ‘mat_cost0_f’
   total_costs_f.close();
   ^~~~~~~~~~~~~
   mat_cost0_f
make[2]: *** [CMakeFiles/stomp_moveit.dir/src/stomp_optimization_task.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/stomp_moveit.dir/all] Error 2
make: *** [all] Error 2
